--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <div class="container">
 <h1>Bem-vindo à Saúde Digital Solutions</h1>
 <img src="print.png" alt="Logo" width="900" height="400">
-<DIV><h3><p>Transformando a gestão de saúde com soluções digitais inovadoras.</p></H3>
+<div><h2><p>Transformando a gestão de saúde com soluções digitais inovadoras.</p></h2>
 </div>A tecnologia tem desempenhado papel fundamental transformação da área
-Saúde,revolucionando O Tratamentos mais eficazes: A tecnologia tem proporcionado avanços significativos no desenvolvimento de novos medicamentos, terapias e procedimentos cirúrgicos. Além disso. 
+Saúde,revolucionando Os Tratamentos mais eficazes: A tecnologia tem proporcionado avanços significativos no desenvolvimento de novos medicamentos, terapias e procedimentos cirúrgicos. Além disso. 
 A telemedicina e a saúde digital permitem que os pacientes acessem tratamentos e monitoramento remotos, ampliando o acesso aos cuidados de saúde.
 • Melhoria na comunicação e compartilhamento de informações: Sistemas eletrônicos de registros médicos e plataformas de comunicação digital
  facilitam o compartilhamento rápido e seguro de informações entre profissionais de saúde, resultando em uma coordenação de cuidados mais eficiente e colaborativa.
@@ -44,12 +44,12 @@ contribui para uma maior eficiência operacional nos
     <img src="medico.jpg" alt="Logo" width="300" height="300">
 <h2>Sobre Nós</h2>
 <p>Saúde Digital Solutions é uma empresa dedicada a modernizar e otimizar a gestão de postos de saúde e USAFAS através de soluções digitais avançadas.</p>
-<p>Nossa missão é fornecer ferramentas eficazes para melhorar a organização, o atendimento e a satisfação dos pacientes.A tecnologia e a inovação têm tido um impacto significativo na área da saúde, trazendo uma série de benefícios e transformando a forma como os cuidados de saúde são fornecidos. Abaixo estão alguns dos principais impactos da tecnologia e inovação na área da saúde:
+Nossa missão é fornecer ferramentas eficazes para melhorar a organização, o atendimento e a satisfação dos pacientes.A tecnologia e a inovação têm tido um impacto significativo na área da saúde, trazendo uma série de benefícios e transformando a forma como os cuidados de saúde são fornecidos. Abaixo estão alguns dos principais impactos da tecnologia e inovação na área da saúde:
     • Melhoria nos diagnósticos: A tecnologia avançada, como exames de imagem de alta resolução, sistemas de diagnóstico por computador e inteligência artificial, tem aprimorado a capacidade dos médicos de identificar e diagnosticar doenças de forma mais precisa e precoce.
     • Tratamentos mais
     eficazes: A tecnologia tem proporcionado avanços significativos no
     desenvolvimento de novos medicamentos, terapias e procedimentos cirúrgicos. Além disso, a telemedicina e a saúde digital permitem que os pacientes acessem tratamentos e monitoramento remotos, ampliando o acesso aos cuidados de saúde.
-    </p>
+    
 <img src="medica.jpg" alt="Logo" width="400" height="300">
 
 </div>
@@ -58,11 +58,11 @@ contribui para uma maior eficiência operacional nos
 <section id="servicos" class="section">
 <div class="container">
 <h2>Serviços</h2>
-<ul>
+<ul><h3>
 <li>Digitalização de documentos médicos: R$ 500,00 por 1000 páginas.</li>
 <li>Implementação do sistema de gestão: R$ 10.000,00 (inclui instalação e configuração).</li>
 <li>Treinamento da equipe: R$ 2.000,00 por grupo de até 10 pessoas.</li>
-</ul>
+</ul></h3>
 </div>
 </section>
 <section id="contato" class="section">
